update to mcp sdk

--- a/package.json
+++ b/package.json
@@ -3,22 +3,21 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "test": "node --test tests/",
     "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "fastmcp": "^1.21.0",
-    "google-auth-library": "^9.15.1",
-    "googleapis": "^148.0.0",
-    "zod": "^3.24.2"
+    "@modelcontextprotocol/sdk": "^1.12.1",
+    "google-auth-library": "^9.14.1",
+    "googleapis": "^143.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22.14.1",
+    "@types/node": "^20.14.1",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   }
