--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,18 @@
 // tsconfig.json
 {
     "compilerOptions": {
-      "target": "ES2022",
-      "module": "NodeNext",
-      "moduleResolution": "NodeNext",
+      "target": "ES2021",
+      "module": "ES2022",
+      "moduleResolution": "node",
       "outDir": "./dist",
       "rootDir": "./src",
       "strict": true,
       "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
-      "resolveJsonModule": true
+      "resolveJsonModule": true,
+      "lib": ["ES2021"]
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
